large cleanup, documentation reshuffle, dependency injection
